--- a/forecasting_case_share/bolcom_books_assignment.ipynb
+++ b/forecasting_case_share/bolcom_books_assignment.ipynb
@@ -66,8 +66,11 @@
    "source": [
     "# Nothing needs to be changed here, this loads the dataset\n",
     "\n",
-    "books = pd.read_csv('bol_books.csv')\n",
+    "url='https://drive.google.com/file/d/1Z8JuBGf7gyXzwGIjueHTRoBzk8VYNmLg/view?usp=share_li'\n",
+    "url='https://drive.google.com/uc?id=' + url.split('/')[-2]\n",
+    "books = pd.read_csv(url)\n",
     "books['date'] = pd.to_datetime(books.date)\n",
+    "\n",
     "books"
    ]
   },
